@@ -87,4 +87,10 @@ allow clients use of all 'L' keys.
 1.9.0SVN
 - Add plugin API
 - partially rewritten event core 
+- updated g15daemon_xmms_spectrum plugin with new features, now enabled via configure --enable-xmmsplugin
+  xmms devel and glib devel packages will need to be installed prior to attempting ./configure --enable-xmmsplugin
+  Plugin is not compiled by default.
+- Clock is now a plugin
+
+
 
